--- a/index.html
+++ b/index.html
@@ -478,6 +478,42 @@
                     </div>
                 </div>
             </section>
+
+
+            <div class="nav">
+                <h2>서면 예바</h2>
+
+                <div id="daumRoughmapContainer1673581650683" class="root_daum_roughmap root_daum_roughmap_landing">
+                </div>
+                <script charset="UTF-8" class="daum_roughmap_loader_script"
+                    src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
+                <script charset="UTF-8">
+                    new daum.roughmap.Lander({
+                        "timestamp": "1673581650683",
+                        "key": "2deyb",
+                        "mapWidth": "1900",
+                        "mapHeight": "460"
+                    }).render();
+
+                </script>
+                <!-- 
+                <div class="location">
+
+                    <div class="left">
+                        <div class="inner">
+                            <img src="./img/logo (1).png" alt="">
+                            <h2>부산광역시 부산진구 중앙대로 736<br /> 경암센터 4층 </h2>
+                            <p>Tel.<span>051.809.2861</span></p>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <img src="./img/map_img.jpg" alt="">
+                    </div>
+                </div> -->
+            </div>
+
+
+
         </main>
     </div>
 
@@ -485,9 +521,49 @@
 
 
 
-    </main>
-    <footer id="footer"></footer>
-    </div>
+
+    <!-- footer -->
+    <footer id="footer">
+        <div class="border">
+            <div class="inner01">
+                <a href="">
+                    <p>개인정보취급방침</p>
+                </a>
+                <a href="">
+                    <p>이용약관</p>
+                </a>
+                <a href="">
+                    <p>환자권리장전</p>
+                </a>
+                <a href="">
+                    <p>영상정보처리기기운영방법</p>
+                </a>
+            </div>
+        </div>
+        <div class="inner02">
+            <figure>
+                <img src="./img/logo_f.png" alt="">
+                <img src="./img/f_logo02.png" alt="">
+            </figure>
+            <div class="info">
+                <div class="info01">
+                    <h2>전화 : <p>051 - 809 - 2861</p>
+                    </h2>
+                    <h2>대표자 : <p>이형철</p>
+                    </h2>
+                    <h2>사업자등록번호 : <p>605 - 91 - 72549</p>
+                    </h2>
+                </div>
+                <div class="info02">
+                    <h2>상호 : <p>예바치과교정과치과의원</p>
+                    </h2>
+                    <h2>주소 : <p>부산광역시 부산진구 중앙대로 736 경암센터 4층</p>
+                    </h2>
+                </div>
+                &copy;2020 Pretty Smile Orthodontic Clinic.
+            </div>
+        </div>
+    </footer>
 
 </body>
 
